Fixed alignment issue with form buttons on Safari

--- a/gsusa/app/src/main/theme/custom/scss/components/_forms.scss
+++ b/gsusa/app/src/main/theme/custom/scss/components/_forms.scss
@@ -2,7 +2,6 @@ input[type="text"],
 form {
     margin: 0;
     padding: 0;
-    margin: 0;
 }
 
 .header .search-form {
@@ -85,4 +84,8 @@ form {
 input[type="submit"]::-moz-focus-inner {
     border: 0px;
     padding: 0px;
+}
+
+input[type="submit"] {
+    margin: 0;
 }
